--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,9 @@ dmypy.json
 # End of https://www.gitignore.io/api/django
 
 
+
+Backend/\.idea/
+
+Backend/Backend/settings\.py
+
+Backend/Backend/urls\.py
